# WEBRECON-LITE

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_cli.py  test_crawler.py  test_header_analyzer.py  test_js_analyzer.py  test_js_extractor.py  test_link_analyzer.py
webrecon/: cli.py
webrecon/analyzer/: header_analyzer.py  js_analyzer.py  link_analyzer.py
webrecon/crawler/: crawler.py
webrecon/extractor/: js_extractor.py  link_extractor.py
webrecon/reporter/: report_writer.py
webrecon/utils/: http_client.py  url_utils.py
